Minor text updates

--- a/index.htm
+++ b/index.htm
@@ -58,7 +58,7 @@
 				<h1>Welcome to Garden Glove Specialists</h1>
 				
 				<div class="well">
-					<img src="images/offers/red_back_gloves.jpg" alt="Spring Offer"/>
+					<a href="offers"><img src="images/offers/red_back_gloves.jpg" alt="Spring Offer"/></a>
 					<h2>Spring Offer Now On!</h2>
 
 					<p>It’s Spring and the garden is starting to come alive, such an exciting time of year and so much gardening to be done!</p>
