--- a/offers.html
+++ b/offers.html
@@ -56,9 +56,13 @@
 			<input type="submit" value="View Shopping Cart">
 		</form>
 					
-		<h1>Spring Offer Sale</h1>
+		<h1>Spring Offer</h1>
 		
-		<p>From the table below select the type and size of gloves. When you have ordered enough to qualify you will be able to select your free pair/s. <br/>You can select your free pair/s from either Ultra, Red Back or Easy Fit gloves.</p>
+		<h2>Buy two pairs of our gardening gloves and <strong>get one pair free</strong>!<br>
+		Buy six pairs of our gardening gloves <strong>get two pairs free</strong>!</h2>
+	
+		<p>From the table below select the type and size of gloves. When you have ordered enough to qualify you will be able to select your free pair/s.</p>
+		<p>You can select your free pair/s from either Ultra, Red Back or Easy Fit gloves.</p>
 
 		<div class="well">
 			
