Removed from 'New' from products

--- a/garden-city-gloves.html
+++ b/garden-city-gloves.html
@@ -50,7 +50,7 @@
 			<input type="submit" value="View Shopping Cart">
 		</form>			
 
-		<h1>NEW! Floral Garden City Gloves</h1>
+		<h1>Floral Garden City Gloves</h1>
 		
 		<div class="well well-sale pull-right">
 			<h1>SALE</h1>
