--- a/index.htm
+++ b/index.htm
@@ -76,12 +76,12 @@
 				
 				<div class="line">
 				<div class="unit size1of2">
-					<p>NEW! Our fabulous <a href="red-back-gloves">Red Back Gloves</a> – with their eye catching design and comfortable fit these have been tried and tested in New Zealand with great success.</p>
+					<p>Our fabulous <a href="red-back-gloves">Red Back Gloves</a> – with their eye catching design and comfortable fit these have been tried and tested in New Zealand with great success.</p>
 					<div class="figure"><a href="red-back-gloves"><img src="images/red-back-glove-thorns-small.jpg" width="225" height="225" alt="Red Back Gloves"></a></div>					
 				</div>
 
 				<div class="unit size1of2 lastUnit">
-					<p>NEW! Our <a href="garden-city-gloves">Garden City Gloves</a> are very pretty and great for light gardening work. These flowery gloves will make a lovely gift.</p>
+					<p>Our <a href="garden-city-gloves">Garden City Gloves</a> are very pretty and great for light gardening work. These flowery gloves will make a lovely gift.</p>
 					<div class="figure"><a href="garden-city-gloves"><img src="images/garden-city-glove-all-small.jpg" width="225" height="225" alt="Garden City gloves"></a></div>
 				</div>
 				</div>
