--- a/red-back-gloves.html
+++ b/red-back-gloves.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>NEW! Red Back Garden Gloves > Garden Glove Specialists</title>
+	<title>Red Back Garden Gloves > Garden Glove Specialists</title>
 	<link href="main.css" rel="stylesheet" type="text/css">
 	<meta name="keywords" content="garden glove specialists,garden gloves,better homes and gardens,gardening gloves,thorn proof gloves,rubber gloves,ladies gardening gloves,garden web,protective gloves,ultra garden gloves,second skin garden gloves,garden accessories, potting gloves, thorn proof gloves">
 	<meta name="description" content="A list of Gardening Show's that Glove Specialists will be attending in 2009. Try on different types and find the right garden glove for you.">
@@ -53,7 +53,7 @@
 			<input type="submit" value="View Shopping Cart">
 		</form>
 					
-		<h1>NEW! Red Back Garden Gloves</h1>
+		<h1>Red Back Garden Gloves</h1>
 		
 		<div class="well well-sale pull-right">
 			<h1>SALE</h1>
