--- a/index.htm
+++ b/index.htm
@@ -89,11 +89,11 @@
 				<div id="upcomingShow">
 					<h2 class="intro" style="margin-bottom:0;padding-top:1em;font-size:.938em;border-top: 1px solid #333">Gardening shows</h2>
 					<p>If you would like to visit us in person, we can be found at gardening shows around South England.</p>
-					<p><strong>Next show:</strong></p>
+					<!-- <p><strong>Next show:</strong></p>
 					<h3>Taunton Flower Show</h3>
 					<p>Aug 2 - 3, 2013<br> Vivary Park, Taunton, TA1 3JW</p>
-					<!-- <p>All our garden shows for 2012 have now passed. Show dates for 2013 will be available soon.</p> -->
-					<p><a href="gardenshows.htm">See our garden show diary</a></p>
+					<p><a href="gardenshows.htm">See our garden show diary</a></p> -->
+					<p>All our garden shows for 2013 have now passed. Show dates for 2014 will be available soon.</p>
 				</div>
 
 			</div>
