Mark SSM & UGXXL out of stock

--- a/secondskin.htm
+++ b/secondskin.htm
@@ -72,14 +72,14 @@
 					<tr>
 						<th>Size</th>
 						<td>Small</td>
-						<td>Medium</td>
+						<td><del>Medium</del>*</td>
 						<td>Large</td>
 						<td>X-Large</td>
 					</tr>
 					<tr class="centre">
 						<th>Hand size</th>
 						<td>6</td>
-						<td>7</td>
+						<td><del>7</del></td>
 						<td>8</td>
 						<td>10</td>
 					</tr>
@@ -89,7 +89,7 @@
 					</tr>
 				</tbody>
 			</table>
-			<!-- <p style="margin-top:1em">Sorry, extra large is currently out of stock.</p> -->
+			<p>*out of stock - available early April 2014</p>
 
 
 			<br />
@@ -103,7 +103,7 @@
 						<label for="sizes">Size</label> 
 						<select name="os0" id="sizes">
 							<option value="Small">Small</option>
-							<option value="Medium">Medium</option>
+							<option value="Medium">Medium (dispatch early April 2014)</option>
 							<option value="Large">Large</option>
 							<option value="X-Large">X-Large</option>
 						</select>
