--- a/ultraglove.htm
+++ b/ultraglove.htm
@@ -76,7 +76,7 @@
 						<td>Medium</td>
 						<td>Large</td>
 						<td>X-Large</td>
-						<td>XX-Large</td>
+						<td><del>XX-Large</del>*</td>
 					</tr>
 					<tr class="centre">
 						<th>Hand size</th>
@@ -85,7 +85,7 @@
 						<td>8</td>
 						<td>9</td>
 						<td>10</td>
-						<td>11</td>
+						<td><del>11</del></td>
 					</tr>
 					<tr class="centre">
 						<th>Price</th>
@@ -93,7 +93,7 @@
 					</tr>
 				</tbody>
 			</table>
-			<!-- <p style="margin-top:1em">Sorry, extra large is currently out of stock.</p> -->
+			<p>*out of stock - available early April 2014</p>
 
 
 			<br />
@@ -111,7 +111,7 @@
 							<option value="Medium">Medium</option>
 							<option value="Large">Large</option>
 							<option value="X-Large">X-Large</option>
-							<option value="XX-Large">XX-Large</option>
+							<option value="XX-Large">XX-Large (dispatch early April 2014)</option>
 						</select>
 					</div>
 
