Update prices to 4.90

--- a/ultraglove.htm
+++ b/ultraglove.htm
@@ -76,7 +76,7 @@
 						<td>Medium</td>
 						<td>Large</td>
 						<td>X-Large</td>
-						<td><del>XX-Large</del>*</td>
+						<td>XX-Large</td>
 					</tr>
 					<tr class="centre">
 						<th>Hand size</th>
@@ -85,15 +85,14 @@
 						<td>8</td>
 						<td>9</td>
 						<td>10</td>
-						<td><del>11</del></td>
+						<td>11</td>
 					</tr>
 					<tr class="centre">
 						<th>Price</th>
-						<td colspan="6">all sizes &pound;4.50 each</td>
+						<td colspan="6">all sizes &pound;4.90 each</td>
 					</tr>
 				</tbody>
 			</table>
-			<p>*out of stock - available early April 2014</p>
 
 
 			<br />
@@ -111,7 +110,7 @@
 							<option value="Medium">Medium</option>
 							<option value="Large">Large</option>
 							<option value="X-Large">X-Large</option>
-							<option value="XX-Large">XX-Large (dispatch early April 2014)</option>
+							<option value="XX-Large">XX-Large</option>
 						</select>
 					</div>
 
@@ -146,7 +145,7 @@
 					<input type="hidden" name="business" value="orders@glovespecialists.co.uk">
 					<input type="hidden" name="item_name" value="Ultra Glove">
 					<input type="hidden" name="item_number" value="UG">
-					<input type="hidden" name="amount" value="4.50">
+					<input type="hidden" name="amount" value="4.90">
 					<input type="hidden" name="no_shipping" value="2">
 					<input type="hidden" name="return" value="http://www.glovespecialists.co.uk/purchase-complete.htm">
 					<input type="hidden" name="cancel_return" value="http://www.glovespecialists.co.uk/purchase-cancelled.htm">
