--- a/secondskin.htm
+++ b/secondskin.htm
@@ -72,24 +72,23 @@
 					<tr>
 						<th>Size</th>
 						<td>Small</td>
-						<td><del>Medium</del>*</td>
+						<td>Medium</td>
 						<td>Large</td>
 						<td>X-Large</td>
 					</tr>
 					<tr class="centre">
 						<th>Hand size</th>
 						<td>6</td>
-						<td><del>7</del></td>
+						<td>7</td>
 						<td>8</td>
 						<td>10</td>
 					</tr>
 					<tr class="centre">
 						<th>Price</th>
-						<td colspan="4">all sizes &pound;4.50 each</td>
+						<td colspan="4">all sizes &pound;4.90 each</td>
 					</tr>
 				</tbody>
 			</table>
-			<p>*out of stock - available early April 2014</p>
 
 
 			<br />
@@ -103,7 +102,7 @@
 						<label for="sizes">Size</label> 
 						<select name="os0" id="sizes">
 							<option value="Small">Small</option>
-							<option value="Medium">Medium (dispatch early April 2014)</option>
+							<option value="Medium">Medium</option>
 							<option value="Large">Large</option>
 							<option value="X-Large">X-Large</option>
 						</select>
@@ -140,7 +139,7 @@
 					<input type="hidden" name="business" value="orders@glovespecialists.co.uk">
 					<input type="hidden" name="item_name" value="Second Skin">
 					<input type="hidden" name="item_number" value="SS">
-					<input type="hidden" name="amount" value="4.50">
+					<input type="hidden" name="amount" value="4.90">
 					<input type="hidden" name="no_shipping" value="2">
 					<input type="hidden" name="return" value="http://www.glovespecialists.co.uk/purchase-complete.htm">
 					<input type="hidden" name="cancel_return" value="http://www.glovespecialists.co.uk/purchase-cancelled.htm">
